examples/v0.4/errors/constant_nested_collection_mutation.nova
User: M = {
    skills: [S]
}

admin:: User = {
    skills = [
        "Everything"
    ]
}

admin.skills[0] = "Hack"

/*
Expected Error:

Cannot modify immutable collection.
*/